--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.App, .Contract {
   text-align: center;
 }
 
@@ -7,14 +7,14 @@
   height: 80px;
 }
 
-.App-header {
+.App-header, .Contract-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-intro {
+.App-intro, .Contract-intro {
   font-size: large;
 }
 
