--- a/src/media/App.css
+++ b/src/media/App.css
@@ -1,4 +1,4 @@
-.App, .Contract {
+.App, .Agreement {
   text-align: center;
 }
 
@@ -7,14 +7,14 @@
   height: 80px;
 }
 
-.App-header, .Contract-header {
+.App-header, .Agreement-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-intro, .Contract-intro {
+.App-intro, .Agreement-intro {
   font-size: large;
 }
 
